zoom in\out on mobile fixed

--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -11,6 +11,9 @@ body {
     overflow-x: hidden;
     font-size: 1rem;
     margin: 0;
+    /* for fixing resizing mobile */
+    height: 100vh;
+    width: 100vw;
 }
 
 section {
